# argus-rs

./: .dockerignore  .env.example  .gitignore  ABI_FEATURE_COMPLETE.md  ARCHITECTURE_DIAGRAMS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_STEPS.md  PULL_REQUEST.md  README.md  SECURITY.md  config.yaml  docker-compose.yml  monitors.example.yaml  run_examples.sh  rust-toolchain.toml  test-ci-build.sh  triggers.example.yaml
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  docs.yml  main.yml  pr-lint.yml  security.yml  verify-examples.yml
.sqlx/: query-08d3470bfbe2b6f73caf071a844a7dbcb588eac534c540475d5b9a6365f9cc01.json  query-0b4f1bc619969444aa52e6706bf795abdb8c65cdb26974751c999d80addc425b.json  query-0c0a0bb55d0a58a45fd13ee5a19c124a9169711122412b92c7bdbfff6a97434e.json  query-1389a681e7153cf08fd988dd9f8987b977e5a3e3f0725dd7a6a77bc971cab197.json  query-16b37b2dbae5a6e384d8aa7f2a9415afd3dd54e9a887ccc2301edeca17cd050a.json  query-1956f0463675a2090505312fb9352113d6c34b318d394c96ec25b491962ffb90.json  query-2ecde1d2625ca7ed57e438cf71fe8b8d6b0ee37afd55c37542806ab40850723c.json  query-30f14013aa67fcf4bb54859fa697ed5f8c67a08cbee695cbf20bc2ab4c5e54c0.json  query-3396a6dbfdf2809403e7e1d96712e8f5e32f82c2a54bab6d3d97aa62985ab45e.json  query-36abb7e79bba73f472810fc426931715b57af9ba683d1224f5f0643fdfea7b69.json  query-3f40569d89a2c4782eb5271bdc4d3d8797fea47986bcf18da6ef0c51ebb4097b.json  query-4dbbedf1b6769b0c505cd3bf4750e3c6eafce2d5d69fed39f908184496942b4f.json  query-50dbb111bacdbfee224f70eca8d13f9e3be7460fe444ec1729fa4f707315a415.json  query-53736070856f10ad21047cfda05f55144b9ddf2b892c3a91c445f56c3c7706bd.json  query-683b5d2a28d59cefde1131a0d8f816db921dbeb8c95bd1bf1ca3f5fe98cbd6b4.json  query-68e96dfeeacf41a3a173ef7815c710faaa26f3405ee10e915376d0fbbf03f060.json  query-720b8ff8f02fedeeee3776d2176bd920f5ad8a81ac908c629ab6ac619a717a3c.json  query-75ef909545feec07c5faf88efd9a12f21ec5d94297979e7fa60b7a75ef3a18d8.json  query-76e88211ad72b448d092c8b78c9b375e147531dde080f454a5f469a0767d6813.json  query-77caa9242dba61fef6fb330ca56eef4c5b4f6aee2487600947a024ad2a45f6a5.json  query-781dad2079c1c04be1870ba89d4070f895cf83f3499c327def4e11f49815638c.json  query-84a2cd28fe7ebe4c66d13a310ed0298b487fdb696b0fcacba3496ae7c04870a5.json  query-89fd0b0078bc565b75a4674a52b0fd97bb29f9f52a34c53eb30b3c51a51fd23f.json  query-8b5f438d9c6b27a57db7745ba60af608e6ef9b55547c937b3398bce88b064618.json  query-8d2d6f5b09d54d4676dc1ce1d10cc60fd922497227fa991e1d0b11e764617935.json  query-8f85801863acdfb008b4c2623e655fcce5d05d8babbe6ac86e4fdbddc7a64d37.json  query-96cf78de50a15a90b6dbc89746d1fd74797f58c4817dca9a8ce016ef8aa6680a.json  query-a0e44d0b524bc09f65953206c1e1a2a65c2ab2a8bca413dc943aa7e4b0eab069.json  query-a1baee8abde540bdd958281c3629c3b789f7d171dcb0345110c68cfa446715bb.json  query-a402bddc7423b8a1593f40b36a29d4d4adc75f96bfb755757daa22e84256284b.json  query-a480a556a8862823ed9371039b9cd539c2117f6db84046bbfc3bc56f94e495c7.json  query-a850cb0df885bf06753d769c723a96d8aa2a97e3068721f9384333c004a1e9e9.json  query-abdd7c6f17c7483f311e1e8404b02112ecb478d5dd93821dbe6cf646cebdd9e7.json  query-acc7b7ed688b85de7ee6713ff7f7038c173afa4f2242b32e440f42b1eacc6950.json  query-b3f736cfbda7c9b8b17fa401979d9d9621a017b1e7094a0d7a47bf3ec5eed367.json  query-b681080e5545da0e860eaacfe3b16096fa3cf88c307abc09a26ba0fd72eddcdf.json  query-bc0698469deb3403aa5a77d5eff8f652771140ee1919c59b3e8a8aa6dffb29e4.json  query-c433dc0e7a64abded7e2048e7060aec863b89fe8ce1d8b471b535d3c05d0899b.json  query-c71824b744998599bb7ed409b4981ac4be40a6eafbce52473045422a87cdce7f.json  query-c73a44a7fbeddc64bf00616b0ac00687124446a54cd56eacc5cc8c7c9fe89449.json  (+12 more)
abis/: aave_governance_v2.json  test.json
actions/: .gitignore
benchmarks/: README.md  erpc.yaml
benchmarks/scenario_a_baseline_throughput/: actions.yaml  monitors.yaml
benchmarks/scenario_b_log_heavy/: actions.yaml  app.yaml  monitors.yaml
benchmarks/scenario_c_calldata_heavy/: actions.yaml  app.yaml  monitors.yaml
configs/: actions.example.yaml  actions.yaml  app.yaml  monitors.example.yaml  notifiers.example.yaml
crates/argus_models/: Cargo.toml
crates/common_models/: Cargo.toml
crates/js_executor/: Cargo.toml
crates/js_executor/src/: engine.rs  main.rs  models.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
examples/: README.md
examples/10_action_with_kafka_publisher/: README.md  actions.yaml  docker-compose.yml  monitors.yaml
examples/10_on_match_script/: README.md  action.js  actions.yaml  monitors.yaml  notifiers.yaml
examples/11_action_with_rabbitmq_publisher/: README.md  actions.yaml  docker-compose.yml  monitors.yaml
examples/12_action_with_nats_publisher/: README.md  actions.yaml  docker-compose.yml  monitors.yaml
examples/1_basic_eth_transfer/: README.md  actions.yaml  monitors.yaml  notifiers.yaml
migrations/: 20250731010038_create_processed_blocks_table.sql  20250806120000_create_monitors_table.sql  20250809120000_add_abi_to_monitors.sql  20250812120000_create_actions_table.sql  20250812120000_create_notifiers_table.sql  20250812120000_create_triggers_table.sql  20250819120000_add_actions_to_monitors.sql  20250819120000_add_notifiers_to_monitors.sql  20250827120000_create_application_state_table.sql  20250908120000_add_decode_calldata_to_monitors.sql  20250920120000_add_on_match_to_monitors.sql  20251007030154_add_id_to_actions_table.sql  20251019120000_create_abis_table.sql  20251029120000_create_abis_table.sql  20251029120100_recreate_monitors_table_with_abi_fk.sql  20251031120000_add_monitor_constraints_and_status.sql  20260305043209_create_outbox.sql
src/: block_fetcher.rs  block_processor.rs  config.rs  context.rs  data_source.rs  filtering.rs  lib.rs  main.rs  models.rs  provider.rs  rhai_conversions.rs  state.rs  supervisor.rs  test_helpers.rs
src/abi/: loader.rs  mod.rs  (+1 more)
tests/: action_dispatcher.rs  action_handler.rs  alert_manager.rs  docker_compose_guard.rs  http_server.rs  match_manager.rs  notification.rs  notification_integration.rs  persistence.rs  publisher_integration.rs
(+239 files in other folders)
