[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/common_models", "crates/js_executor"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
common_models = { path = "crates/common_models" }

[dependencies]
alloy = { version = "1.0.23", features = ["essentials"] }
arc-swap = "1.7.1"
async-trait = "0.1.88"
bitflags = "2.9.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
common_models = { workspace = true }
config = { version = "0.15.13", features = ["yaml"] }
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
minijinja = { version = "2.11.0", features = ["serde"] }
num-bigint = { version = "0.4.5", features = ["serde"] }
num-traits = "0.2.19"
parking_lot = "0.12.4"
regex = "1.11.1"
reqwest = { version = "=0.12.22", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
rhai = { version = "1.22.2", features = ["sync", "internals", "decimal"] }
rust_decimal = { version = "1.37.2", features = ["maths"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
tempfile = "3.8.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.16"
tower = { version = "0.5.2", features = ["retry"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.2"
urlencoding = "2.1.3"

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.7.0"
