[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.23", features = ["essentials"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
config = { version = "0.15.13", features = ["yaml"] }
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
regex = "1.11.1"
reqwest = { version = "=0.12.22", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
rdkafka = { version = "0.38.0", features = ["cmake-build", "tokio"] }
rhai = { version = "1.22.2", features = ["sync", "internals", "decimal"] }
num-bigint = { version = "0.4.5", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
tempfile = "3.8.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.16"
tower = { version = "0.5.2", features = ["retry"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
urlencoding = "2.1.3"
minijinja = { version = "2.11.0", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
rust_decimal = { version = "1.37.2", features = ["maths"] }
parking_lot = "0.12.4"
arc-swap = "1.7.1"
bitflags = "2.9.4"
lapin = "3.7.0"
async-nats = "0.43.1"
bytes = "1.10.1"

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.7.0"
tokio-stream = "0.1.15"
