[package]
name = "js_executor"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.45", features = ["derive"] }
common_models = { path = "../common_models" }
deno_core = "0.362.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bin]]
name = "js_executor"
path = "src/main.rs"
